01-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nsp
  labels:
    name: nsp
