3-p4d-helix.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nsp
  name: p4d-helix
  labels:
    app: p4d-helix
spec:
  type: NodePort
  ports:
    - port: 1666
      targetPort: 1666
  selector:
    app: p4d-helix
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: nsp
  name: p4d-helix
  labels:
    app: p4d-helix
spec:
  template:
    metadata:
      labels:
        app: p4d-helix
    spec:
      containers:
      - image: khawarhere/helix-docker_p4d.helix
        name: p4d-helix
        ports:
        - containerPort: 1666
        volumeMounts:
        - mountPath: /p4
          name: pvc-helix-p4d
        tty: true
      restartPolicy: Always
      volumes:
      - name: pvc-helix-p4d
        persistentVolumeClaim:
          claimName: pvc-helix-p4d
