5-swarm-helix.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nsp
  name: swarm-helix
  labels:
    app: swarm-helix
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: swarm-helix
    tier: web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: nsp
  name: swarm-helix
spec:
  template:
    metadata:
      labels:
        app: swarm-helix
        tier: web
    spec:
      containers:
      - image: khawarhere/helix-docker_swarm.helix
        name: swarm-helix
        ports:
        - containerPort: 80
        tty: true
      restartPolicy: Always
