8-p4p-helix.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helix-p4p
  namespace: nsp
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
    containers:
    - image: helix-p4p
      name: helix-p4p
      ports:
      - containerPort: 1666
      tty: true
      volumeMounts:
      - mountPath: /cache
        name: pvc-helix-p4p
        hostname: helix-p4p
    restartPolicy: Always
    volumes:
    - name: pvc-helix-p4p
      persistentVolumeClaim:
        claimName: pvc-helix-p4p
---
apiVersion: v1
kind: Service
metadata:
  namespace: nsp
  name: helix-p4p
  labels:
    app: helix-p4p
spec:
  type: NodePort
  ports:
    - port: 1666
  selector:
    app: helix-p4p
